Completely new UI and UX without QtQuickControls and with agenda capabilities provided by nemo-qml-plugin-calendar

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>EventDialog.qml</file>
+        <file>MonthSelector.qml</file>
+        <file>day_background.png</file>
     </qresource>
 </RCC>
